Fixed javascript to be compatible with turbolinks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
         <div class="container-fluid">
           <div class="row">
 
-          </div>
+          </div> <!-- end div for row -->
           <br />
           <div class="row text-center footer-desktop">
             <div class='col-md-8 offset-md-2 col-sm-12'>
@@ -88,8 +88,8 @@
               <%= link_to 'Terms & Privacy', terms_path %>
               <%= link_to 'Tax Info', 'https://www.breakdiving.org/tax_document.html', :target => '_blank' %>
               <%= link_to 'Contact Us', about_path %>
-            </div>
-          </div>
+            </div> <!-- end div for col 8 -->
+          </div> <!-- end div for row -->
           <div class="row text-center">
             <div class="col-md-6 offset-md-3">
               <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -99,9 +99,9 @@
                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
               </form>
               © 2018 Break Diving, Inc. All Rights reserved.
-            </div>
-          </div>
-        </div>
+            </div> <!-- end div for col 6 -->
+          </div> <!-- end div for row -->
+        </div> <!-- end div for container -->
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
@@ -109,6 +109,6 @@
       <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"></script>
-    </div>
+    </div> <!-- end div footer -->
   </body>
 </html>
