--- a/app/views/contract_revisions/_contract_lawsuit.html.erb
+++ b/app/views/contract_revisions/_contract_lawsuit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for ([@contract,@contract_revision]), html: { class: 'edit-lawsuit' } do |f| %>
+<%= form_for [@contract,@contract_revision], html: { class: 'edit-lawsuit' } do |f| %>
   <div class="form-group row">
     <%= f.label :number_lawsuit, "No. Lawsuits", :class => "col-2 col-form-label" %>
     <div class='col-2 read-only form-control'>
