--- a/app/views/websites/volunteer.html.erb
+++ b/app/views/websites/volunteer.html.erb
@@ -5,10 +5,10 @@
   <p></p>
   <h2>LAWYERS &amp; LAW STUDENTS</h2>
 
-    <p>Would you like to help us help us review online terms of service agreements (it's actually really fun, and you'll learn a LOT).  You'll also help us to further refine the bill of rights and the rating scale.  First step: <a href="www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
+    <p>Would you like to help us help us review online terms of service agreements (it's actually really fun, and you'll learn a LOT).  You'll also help us to further refine the bill of rights and the rating scale.  First step: <a href="//www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
 
    <h2>CODERS &amp; DEVELOPERS</h2>
 
-    <p>Would you like to help us further develop this website, help us create mobile app versions of the site, and help us refine the code base to make everything run even more smoothly?  We are interested in coders who know any of the following: ruby, rails, html, css, bootstrap, javascript, react, swift, java, and more.  First step: <a href="www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
+    <p>Would you like to help us further develop this website, help us create mobile app versions of the site, and help us refine the code base to make everything run even more smoothly?  We are interested in coders who know any of the following: ruby, rails, html, css, bootstrap, javascript, react, swift, java, and more.  First step: <a href="//www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
 
 </div>
